--- a/wp-content/themes/astra-child/css/theme.css
+++ b/wp-content/themes/astra-child/css/theme.css
@@ -1,5 +1,6 @@
 #productCount.quantite {
- 
+    display: block;
+    margin:auto;
     width: 39px;
     height: 56px;
 
@@ -57,7 +58,7 @@ ul#ast-hf-menu-1 :hover {
     top: 0;
     bottom: 0;
     left: -10px; 
-    width: 3px;
+    width: 1px;
     background-color: white; 
 }
 
